--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
@@ -4,19 +4,22 @@
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
+<AnchorPane maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
    <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-         <image></image>
+         <image>
+            <Image url="@../../../../../../../../../../Downloads/libri800x900.png" />
+         </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="563.0" layoutX="62.0" layoutY="160.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" />
-      <ListView fx:id="listViewSerieAcquisto" layoutX="66.0" layoutY="163.0" prefHeight="523.0" prefWidth="700.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="563.0" layoutX="62.0" layoutY="160.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0" />
+      <ListView fx:id="listViewSerieAcquisto" layoutX="103.0" layoutY="108.0" prefHeight="555.0" prefWidth="702.0" AnchorPane.leftAnchor="103.0">
          <contextMenu>
             <ContextMenu>
               <items>
@@ -26,18 +29,19 @@
             </ContextMenu>
          </contextMenu></ListView>
       <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#goBack" style="-fx-background-color: #2b2d30;" text="Back" textFill="WHITE" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="55.0" layoutX="65.0" layoutY="86.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
-      <Text fill="#2b2d30" layoutX="72.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="63.0" layoutX="102.0" layoutY="34.0" stroke="#de5f4f" strokeWidth="2.0" width="710.0" AnchorPane.leftAnchor="101.0" AnchorPane.rightAnchor="87.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="42.0" layoutX="103.0" layoutY="678.0" stroke="#de5f4f" strokeWidth="2.0" width="710.0" />
+      <Text fill="#2b2d30" layoutX="107.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Text>
-      <Text fill="#2b2d30" layoutX="72.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere quali delle serie che hai aggiunto ai preferiti sono acquistabili e dove reperirle">
+      <Text fill="#2b2d30" layoutX="106.0" layoutY="86.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere quali delle serie che hai aggiunto ai preferiti sono acquistabili e dove reperirle" AnchorPane.leftAnchor="106.0" AnchorPane.rightAnchor="120.7109375">
          <font>
             <Font name="Arial" size="16.0" />
          </font>
       </Text>
-      <Text fill="#2b2d30" layoutX="108.0" layoutY="709.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Per vedere le informazioni serie o acquisto o eliminarla dai preferiti premi il tasto destro">
+      <Text fill="#2b2d30" layoutX="140.0" layoutY="704.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Per vedere le informazioni serie o acquisto o eliminarla dai preferiti premi il tasto destro" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="143.71875">
          <font>
             <Font name="Arial" size="16.0" />
          </font>
