--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/acquistoStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/acquistoStage.fxml
@@ -12,11 +12,9 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.AcquistoController">
    <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-         </image>
       </ImageView>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="535.0" layoutX="97.0" layoutY="202.0" stroke="#de5f4f" strokeWidth="2.0" width="706.0" />
-      <Button fx:id="buttonClose" layoutX="424.0" layoutY="691.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
+      <Button layoutX="424.0" layoutY="691.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
       <TableView fx:id="tableView" fixedCellSize="0.0" layoutX="98.4" layoutY="231.2" prefHeight="438.0" prefWidth="714.0" AnchorPane.bottomAnchor="138.0" AnchorPane.leftAnchor="91.0" AnchorPane.rightAnchor="95.0" AnchorPane.topAnchor="224.0">
          <columns>
             <TableColumn fx:id="codaColumn" prefWidth="54.0" text="CodA" />
