--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/conferenzaStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/conferenzaStage.fxml
@@ -11,8 +11,8 @@
       <Text fx:id="textIndizioId" layoutX="-1.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Indirizzo:" textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="75.0" />
       <Text fx:id="textResponsabileId" layoutX="-1.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Responsabile:" textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="135.0" />
       <Text fx:id="textDataIId" layoutX="1.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data inizio: " textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="95.0" />
-      <Button fx:id="buttonClose" layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
-      <Text fx:id="textStrutturaId" layoutX="1.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sruttura:" textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="55.0" />
+      <Button  layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" style="-fx-background-color: #2b2d30;" text="Close" textFill="WHITE" />
+      <Text fx:id="textStrutturaId" layoutX="1.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Struttura:" textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="55.0" />
       <Text fx:id="textDataFId" layoutX="1.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Fine" textAlignment="CENTER" wrappingWidth="250.0" AnchorPane.topAnchor="115.0" />
    </children>
 </AnchorPane>
