--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -18,8 +17,6 @@
 <AnchorPane maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500" style="-fx-background-color: #fdf3ea; -fx-border-width: 3; -fx-border-color: #de5f4f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.UserInformativaController">
    <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="500.0" fitWidth="495.0" layoutX="2.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-         </image>
          <viewport>
             <Rectangle2D height="500.0" width="495.0" />
          </viewport>
@@ -51,7 +48,7 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="buttonBack" layoutX="227.0" layoutY="428.0" mnemonicParsing="false" onAction="#back_goToHome" style="-fx-background-color: #2b2d30; -fx-text-fill: white;" text="Back" />
+      <Button layoutX="227.0" layoutY="428.0" mnemonicParsing="false" onAction="#back_goToHome" style="-fx-background-color: #2b2d30; -fx-text-fill: white;" text="Back" />
       <PasswordField fx:id="txtOldPassword" layoutX="87.0" layoutY="133.0" promptText="Vecchia Password" />
       <PasswordField fx:id="txtNewPassword" layoutX="236.0" layoutY="133.0" promptText="NuovaPassword" />
       <Label layoutX="85.0" layoutY="405.0" text="Per eliminare o vedere le informazioni della serie premici con il tasto destro">
@@ -78,10 +75,11 @@
             <TableColumn fx:id="completataColumn" prefWidth="75.0" text="Completata" />
          </columns>
       </TableView>
-      <Label layoutX="34.0" layoutY="24.0" prefHeight="47.0" prefWidth="454.0" text="Qui puoi vederele tue informazioni e le tue serie preferite">
+      <Label layoutX="34.0" layoutY="24.0" prefHeight="47.0" prefWidth="454.0" text="Qui puoi vedere le tue informazioni e le tue serie preferite">
          <font>
             <Font name="Arial" size="17.0" />
          </font>
       </Label>
+      <Button layoutX="393.0" layoutY="468.0" mnemonicParsing="false" onAction="#eliminareAccount" style="-fx-background-color: #2b2d30; -fx-text-fill: white;" text="Elimina il Profilo" />
    </children>
 </AnchorPane>
