--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaArticolo.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/paginaInformativaArticolo.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
@@ -11,9 +10,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="900.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #964B00;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.ArticoloInformativaController">
    <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../../../../../Downloads/libri800x900.png" />
-         </image>
       </ImageView>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fdf3ea" height="650.0" layoutX="157.0" layoutY="114.0" stroke="#de5f4f" strokeType="INSIDE" style="-fx-background-color: #fdf3ea;" width="700.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="100.0" />
       <Button layoutX="423.0" layoutY="722.0" mnemonicParsing="false" onAction="#goToHome" style="-fx-background-color: #2b2d30;" text="Go Back" textFill="WHITE" />
@@ -55,7 +51,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonAcquistoId" defaultButton="true" layoutX="734.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToAcquisto" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Aquisto" textFill="#0800f8" underline="true">
+      <Button  defaultButton="true" layoutX="734.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToAcquisto" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Acquisto" textFill="#0800f8" underline="true">
          <font>
             <Font size="14.0" />
          </font>
@@ -69,7 +65,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Text>
-      <Button id="Conferenza" fx:id="buttonConferenzaId" defaultButton="true" layoutX="103.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToConferenza" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Confernza" textFill="#0800f8" underline="true" visible="false">
+      <Button id="Conferenza" fx:id="buttonConferenzaId" defaultButton="true" layoutX="103.0" layoutY="721.0" mnemonicParsing="false" onAction="#goToConferenza" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Conferenza" textFill="#0800f8" underline="true" visible="false">
          <font>
             <Font size="14.0" />
          </font>
