--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/rivistaStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/rivistaStage.fxml
@@ -10,6 +10,6 @@
       <Text fx:id="textDataId" layoutX="4.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" textAlignment="CENTER" wrappingWidth="241.248046875" />
       <Text fx:id="textResponsabileId" layoutX="-1.0" layoutY="91.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Responsabile" textAlignment="CENTER" wrappingWidth="250.0" />
       <Text fx:id="textArgomentoId" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Argomento" textAlignment="CENTER" wrappingWidth="250.0" />
-      <Button fx:id="buttonClose" layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" text="Close" />
+      <Button  layoutX="103.0" layoutY="211.0" mnemonicParsing="false" onAction="#close" text="Close" />
    </children>
 </AnchorPane>
